fix: removes animation on mobile

--- a/web/src/components/Common/Navigation/Navigation.module.scss
+++ b/web/src/components/Common/Navigation/Navigation.module.scss
@@ -158,8 +158,8 @@
 
 @include mq(0, $breakpoint-tabletLandscape) {
   .Branding {
-    width: 280px;
-    height: 80px;
+    width: 190px;
+    height: 60px;
   }
 }
 
